data/derived/comb/progs/unify/prog2323.ml.out
Characters 63-69:
  | h :: t -> h*h + sqsumL;;
                    ^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
